@@ -3,6 +3,7 @@ shady-KISS-skin History
 
 2016-05-02:
 - Added setup for number of hostnamechars in epg2vdr-menu Timer
+- Removed areascroll of fritzbox-separators
 
 2016-04-20:
 - Added setup for epg2vdrShowHostname
